--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
+  <!-- <header class="bg-transparent">
+    <div class=" flex items-center justify-center ">
+      <h1 class="text-5xl md:text-7xl font-serif font-light tracking-tight text-gray-900 dark:text-white leading-tight">
+        <span class="block">Aether</span>
+        <span class="block text-gray-500 dark:text-gray-400 text-xl tracking-widest mt-2">Luxury Meets Innovation</span>
+      </h1>
+    </div>
+  </header> -->
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
